# Transitive_reduction

./: .gitignore  .~lock.resultados_benchmark.csv#  CMakeLists.txt  Makefile  README.md  programa
inputs/: dense_graph.txt  denso_100.txt  denso_250.txt  denso_500.txt  esparso_100.txt  esparso_1000.txt  esparso_250.txt  esparso_500.txt  inputGenerator.py  sparse_graph.txt
inputs/benchmark input/: denso_100.txt  denso_250.txt  denso_500.txt  esparso_100.txt  esparso_1000.txt  esparso_250.txt  esparso_500.txt
src/: main.cpp
src/benchmark/: runner.cpp  runner.hpp
src/benchmark/benchmark.calculator/: benchmark.py  resultados_benchmark.csv
src/generator/: gerador_de_grafo.cpp  gerador_de_grafo.hpp
src/lib/: Grafo.cpp  Graph.hpp  Graph_adjList.cpp  Graph_adjList.hpp  Graph_adjMatrix.cpp  Graph_adjMatrix.hpp
